--- a/pom.xml
+++ b/pom.xml
@@ -10,17 +10,13 @@
     <packaging>trino-plugin</packaging>
 
     <properties>
-        <maven.compiler.source>17</maven.compiler.source>
-        <maven.compiler.target>17</maven.compiler.target>
+        <maven.compiler.source>21</maven.compiler.source>
+        <maven.compiler.target>21</maven.compiler.target>
+        <project.build.targetJdk>21</project.build.targetJdk>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
     <dependencies>
-
-        <dependency>
-            <groupId>com.google.guava</groupId>
-            <artifactId>guava</artifactId>
-        </dependency>
 
         <dependency>
             <groupId>com.sap.cloud.db.jdbc</groupId>
@@ -31,7 +27,7 @@
         <dependency>
             <groupId>io.trino</groupId>
             <artifactId>trino-base-jdbc</artifactId>
-            <version>405</version>
+            <version>440</version>
         </dependency>
 
         <dependency>
@@ -86,7 +82,7 @@
         <dependency>
             <groupId>io.trino</groupId>
             <artifactId>trino-spi</artifactId>
-            <version>405</version>
+            <version>440</version>
             <scope>provided</scope>
         </dependency>
 
@@ -108,12 +104,14 @@
             <groupId>io.opentelemetry</groupId>
             <artifactId>opentelemetry-api</artifactId>
             <version>1.25.0</version>
+            <scope>provided</scope>
         </dependency>
 
         <dependency>
             <groupId>io.opentelemetry</groupId>
             <artifactId>opentelemetry-context</artifactId>
             <version>1.25.0</version>
+            <scope>provided</scope>
         </dependency>
 
         <dependency>
@@ -128,7 +126,7 @@
         <dependency>
             <groupId>io.trino</groupId>
             <artifactId>trino-main</artifactId>
-            <version>405</version>
+            <version>440</version>
             <scope>test</scope>
         </dependency>
 
@@ -136,7 +134,7 @@
         <dependency>
             <groupId>io.trino</groupId>
             <artifactId>trino-testing</artifactId>
-            <version>405</version>
+            <version>440</version>
             <scope>test</scope>
         </dependency>
 
@@ -315,7 +313,7 @@
                         <dependency>
                             <groupId>com.github.ferstl</groupId>
                             <artifactId>pedantic-pom-enforcers</artifactId>
-                            <version>2.1.0</version>
+                            <version>2.0.0</version>
                         </dependency>
                         <dependency>
                             <groupId>de.skuzzle.enforcer</groupId>
@@ -511,6 +509,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.12.4</version>
                 <configuration>
                     <includes>
                         <!-- Tests classes should start with "Test", but we do also want to include tests incorrectly named, with "Test" at the end -->
